Fixed a few sizing bugs and added about me and skills section layout

--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -1,13 +1,12 @@
 .navbar__container {
-    position: 'sticky';
-    /* position: '-webkit-sticky'; */
-    top: 0;
-    width: 100%;
-    padding: 110;
-};
-
-.navbar__menulist {
-    border-radius: 0;
-    border-width: 0;
+  position: "sticky";
+  /* position: '-webkit-sticky'; */
+  top: 0;
+  width: 100%;
+  padding: 110;
 }
 
+.navbar__menulist {
+  border-radius: 0;
+  border-width: 0;
+}
